# stoneshard-helper

./: CMakeLists.txt  README.md  main.cpp
common/: common.cpp  common.h  speed.cpp  speed.h  steam.cpp  steam.h  stoneshardcommon.cpp  stoneshardcommon.h  updater.cpp  updater.h
data/: Hermit Ring.json  Orient Shield.json  app.manifest  app.rc  o_inv_hilda_trinket.json  o_inv_tinker.json  rcdata.qrc  update.bat
data/json/: Hermit Ring.json  o_inv_bag_belt01.json  o_inv_lantern.json  o_inv_tinker.json
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
